# aoc2023-rust

./: Cargo.toml  rust-toolchain.toml
lib/aoc/: Cargo.toml
lib/aoc/src/: lib.rs  parse.rs  solve.rs
puzzles/day01/: Cargo.toml
puzzles/day01/benches/: aoc.rs
puzzles/day01/src/: main.rs
puzzles/day02/: Cargo.toml
puzzles/day02/benches/: aoc.rs
puzzles/day02/src/: main.rs
puzzles/day03/: Cargo.toml
puzzles/day03/benches/: aoc.rs
puzzles/day03/src/: main.rs
puzzles/day04/: Cargo.toml
puzzles/day04/benches/: aoc.rs
puzzles/day04/src/: main.rs
puzzles/day05/: Cargo.toml
puzzles/day05/benches/: aoc.rs
puzzles/day05/src/: main.rs
puzzles/day06/: Cargo.toml
puzzles/day06/benches/: aoc.rs
puzzles/day06/src/: main.rs
puzzles/day07/: Cargo.toml
puzzles/day07/benches/: aoc.rs
puzzles/day07/src/: main.rs
puzzles/day08/: Cargo.toml
puzzles/day08/benches/: aoc.rs
puzzles/day08/src/: main.rs
puzzles/day09/: Cargo.toml
puzzles/day10/: Cargo.toml
puzzles/day11/: Cargo.toml
puzzles/day12/: Cargo.toml
puzzles/day13/: Cargo.toml
puzzles/day14/: Cargo.toml
puzzles/day15/: Cargo.toml
puzzles/day16/: Cargo.toml
puzzles/day17/: Cargo.toml
puzzles/day18/: Cargo.toml
puzzles/day18/benches/: aoc.rs
puzzles/day18/src/: main.rs
puzzles/day18/src/answer/: parse.rs  solve.rs
puzzles/day18/src/core/: direction.rs  instruction.rs  mod.rs
puzzles/day19/: Cargo.toml
puzzles/day20/: Cargo.toml
puzzles/day21/: Cargo.toml
puzzles/day21/src/: lib.rs  (+1 more)
puzzles/day22/: Cargo.toml
scripts/: mkday
templates/puzzle2/: Cargo.toml
(+149 files in other folders)
