[package]
name = "day18"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aoc = { path = "../../lib/aoc" }
nalgebra = "0.32"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "aoc"
harness = false
